--- a/css/main.css
+++ b/css/main.css
@@ -64,7 +64,7 @@ p, h1, h2, h3, h4, h5, h6 {
 
 .hero__left__title{
     text-transform: uppercase;
-    font-size: clamp(3rem, 5vw, 5.35rem);
+    font-size: clamp(2.5rem, 5vw, 5.35rem);
     line-height: 1.1;
     text-align: center;
     line-break: auto;
@@ -172,7 +172,13 @@ p, h1, h2, h3, h4, h5, h6 {
     overflow: hidden;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 640px) {
+    .hero__left__content{
+        padding: 2em;
+    }
+}
+
+@media screen and (min-width: 700px) {
 
     .container{
         height: 100%;
